--- a/src/styles/Dashboard.scss
+++ b/src/styles/Dashboard.scss
@@ -24,7 +24,8 @@
     width: calc(100% - 20px);
     height: calc(100vh - 60px);
     left: 10px;
-    
+    padding-top: 30px;
+    padding-right: 60px;
   }
 }
 
