--- a/src/styles/Login.scss
+++ b/src/styles/Login.scss
@@ -44,7 +44,9 @@
     justify-content: center;
     align-items: center;
     padding: 15px;
-    background-image: url(./../../public/islas.jpg);
+    //backgroun image in public
+
+    background-image: url(https://ibb.co/ZNQkVnr);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
