--- a/src/styles/Login.scss
+++ b/src/styles/Login.scss
@@ -46,7 +46,7 @@
     padding: 15px;
     //backgroun image in public
 
-    background-image: url(https://ibb.co/ZNQkVnr);
+    background-image: url(https://i.ibb.co/V3FPt7G/islas.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
