--- a/src/styles/Dashboard.scss
+++ b/src/styles/Dashboard.scss
@@ -11,7 +11,7 @@
     width: calc(100% - 300px);
     left: 300px;
     min-height: 100vh;
-    background: $white;
+    background: azure;
     transition: 0.5s;
   }
   .main.active
