--- a/src/styles/admin.scss
+++ b/src/styles/admin.scss
@@ -2,10 +2,18 @@
     margin: 0 !important;
 }
 
-.UserTable{
+h1{
+  
+  @media (min-width: 1200px) {
+    margin-left: 10vw;
+  }
+    
+  }
+
+.TableInf{
     width: 100%;
     border-collapse: collapse;
-    height: 100%;
+    height: 90%;
     border-spacing: 0;
     margin-bottom: 20px;
     //flex
