--- a/src/styles/Topbar.scss
+++ b/src/styles/Topbar.scss
@@ -43,6 +43,14 @@
     border-radius: 50%;
     overflow: hidden;
     cursor: pointer;
+    p{
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 1.5em;
+      color: $black2;
+    }
   }
   .user img{
     position: absolute;
