--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -7,6 +7,8 @@
 @import "../../node_modules/@syncfusion/ej2-popups/styles/material.css";
 @import "../../node_modules/@syncfusion/ej2-splitbuttons/styles/material.css";
 @import "../../node_modules/@syncfusion/ej2-react-grids/styles/material.css";
+@import "../../node_modules/@syncfusion/ej2-react-treegrid/styles/material.css";
+
 .home {
   height: 100%;
   width: 100%;
