cambio para estilos

--- a/src/styles/vAcuerdos.scss
+++ b/src/styles/vAcuerdos.scss
@@ -1,5 +1,5 @@
 @import "base.scss";
-
+/* purgecss start ignore */
 .vAcuerdos {
   .titulo {
     font-size: 1.2em;
@@ -84,3 +84,4 @@
     font-family: "Roboto", sans-serif;
   }
 }
+/* purgecss end ignore */
