--- a/src/styles/vAcuerdos.scss
+++ b/src/styles/vAcuerdos.scss
@@ -24,10 +24,20 @@
       color: #150070;
       font-weight: bold;
   }
+  .fuente-Fuera {
+      font-family: "Roboto", sans-serif;
+      color: rgb(255, 98, 0);
+      font-weight: bold;
+  }
   .fuente-Vencido {
     font-family: "Roboto", sans-serif;
     font-weight: bold;
     color: #ff0000;
+  }
+  .fuente-Finalizado{
+    font-family: "Roboto", sans-serif;
+    font-weight: bold;
+    color: #328300;
   }
   .fuente-Baja {
     font-family: "Roboto", sans-serif;
@@ -50,6 +60,11 @@
     color: #000;
     font-weight: bold;
   }
+  .fuente-Hoy {
+    font-family: "Roboto", sans-serif;
+    color: #ff9100;
+    font-weight: bold;
+  }
   .row {
     margin: 0;
     padding: 0;
@@ -57,7 +72,7 @@
     --bs-gutter-x: 0.5rem;
   }
   .btn-primary{
-    width: 30%;
+    width: 20%;
     height: 3.5rem;
     border-radius: 0.25rem;
     border: 1px solid #00aeef;
@@ -66,22 +81,72 @@
     font-family: "Roboto", sans-serif;
   }
   .btn-danger{
-    width: 30%;
+    width: 20%;
     height: 3.5rem;
     border-radius: 0.25rem;
     border: 1px solid #ff0000;
     background-color: #ff0000;
     color: #fff;
     font-family: "Roboto", sans-serif;
+    &:hover{
+      color: 1px solid #ff00007d;
+    }
   }
   .btn-success{
-    width: 30%;
+    width: 20%;
     height: 3.5rem;
     border-radius: 0.25rem;
     border: 1px solid #00d512;
     background-color: #00d512;
     color: #fff;
     font-family: "Roboto", sans-serif;
+    &:hover{
+      border: 1px solid #00d5127d;
+    }
+  }
+  .btn-agregar{
+    width: 20%;
+    height: 3.5rem;
+    border-radius: 0.25rem;
+    border: 1px solid #6213ff;
+    background-color: #6213ff;
+    color: #fff;
+    font-family: "Roboto", sans-serif;
+    &:hover{
+      border: 1px solid #6213ff7d;
+      background-color: #2c0085;
+      color: #fff;
+    }
+  }
+
+  .btn-finalizar{
+    width: 20%;
+    height: 3.5rem;
+    border-radius: 0.25rem;
+    border: 1px solid #006f0974;
+    background-color: #006f0974;
+    color: #fff;
+    font-family: "Roboto", sans-serif;
+    &:hover{
+      border: 1px solid #006f097d;
+      background-color: #004806;
+      color: #fff;
+    }
+  }
+  .btn-cambiarInfo{
+    width: 20%;
+    height: 3.5rem;
+    border-radius: 0.25rem;
+    border: 1px solid #0067cf;
+    background-color: #0067cf;
+    color: #fff;
+    font-family: "Roboto", sans-serif;
+    &:hover{
+      //hover effect
+      border: 1px solid #0067cf7d;
+      background-color: #02386f;
+      color: #fff;
+    }
   }
 }
 /* purgecss end ignore */
