--- a/src/styles/calendario.scss
+++ b/src/styles/calendario.scss
@@ -1,1 +1,13 @@
 @import "base.scss";
+
+.e-all-day-time-zone-row {
+  display: none !important;
+}
+
+.e-repeat-parent-row {
+  display: none !important;
+}
+
+.e-repeat-container {
+  display: none !important;
+}
