--- a/src/styles/calendario.scss
+++ b/src/styles/calendario.scss
@@ -15,3 +15,10 @@
 .e-editor{
     display: none !important;
 }
+
+#_dialog_wrapper{
+    *{
+    margin-right: 5px;
+    padding-right: 5px;
+    }
+}
