--- a/src/styles/LoadingInfo.scss
+++ b/src/styles/LoadingInfo.scss
@@ -5,7 +5,7 @@
   width: 142px;
   height: 40px;
   margin: -20px 0 0 -71px;
-  background: white;
+  background: rgb(228, 228, 228);
   filter: contrast(20);
 }
 .dot {
