Cambios y agregar participantes de contactos

--- a/src/styles/agregarAcuerdo.scss
+++ b/src/styles/agregarAcuerdo.scss
@@ -27,6 +27,14 @@ h6 {
   }
 }
 
+.flechaIzquierda {
+  font-size: 28px;
+  i{
+    font-size: 36px;
+    cursor: pointer;
+  }
+}
+
 .acuerdos-form {
   background: #f1f7fc;
   padding: 80px 0;
