--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -9,6 +9,7 @@
 @import "../../node_modules/@syncfusion/ej2-react-grids/styles/material.css";
 @import "../../node_modules/@syncfusion/ej2-react-treegrid/styles/material.css";
 @import "../../node_modules/@syncfusion/ej2-react-schedule/styles/material.css";
+@import "../../node_modules/@syncfusion/ej2-react-dropdowns/styles/material.css";
 
 .home {
   height: 100%;
