--- a/src/styles/Sidebar.scss
+++ b/src/styles/Sidebar.scss
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap");
 
-@import './base.scss';
+@import "./base.scss";
 
 .sidebar {
   * {
@@ -19,13 +19,13 @@
     transition: 0.5s;
     overflow: hidden;
   }
-  .navigation.active{
+  .navigation.active {
     width: 60px;
-    .welcome{
+    .welcome {
       display: none;
     }
   }
-  .welcome{
+  .welcome {
     padding-left: 15px;
   }
   .navigation ul {
@@ -54,7 +54,6 @@
     margin-bottom: 10px;
     pointer-events: none;
     //first span
-   
   }
 
   .navigation ul li:nth-child(1) a span:nth-child(2) {
@@ -125,5 +124,89 @@
     border-radius: 50%;
     box-shadow: 35px -35px 0 10px $white;
     pointer-events: none;
+  }
+
+  .control-section.badge-samples {
+    overflow: auto;
+  }
+
+  .sample_container.badge-default {
+    max-width: 328px;
+    margin: auto;
+    margin-top: 130px;
+  }
+
+  .badge-default .e-btn {
+    position: relative;
+  }
+
+  .badge-default .e-bigger .e-btn {
+    padding: 3px 10px;
+  }
+
+  @media only screen and (max-width: 400px) {
+    .sample_container.badge-default .e-btn-group {
+      left: calc(50% - 111px);
+    }
+    .sample_container.badge-default #task {
+      display: none;
+    }
+  }
+
+  /* Group Button Customization */
+
+  .badge-default .e-btn-group {
+    width: auto;
+    position: relative;
+    left: calc(50% - 164px);
+  }
+
+  .e-btn-group.e-custom-button {
+    box-shadow: none;
+  }
+
+  .highcontrast .e-btn-group.e-custom-button .e-btn:focus {
+    outline: 0px;
+    color: white;
+  }
+
+  .fabric .e-btn-group.e-custom-button .e-btn,
+  .material .e-btn-group.e-custom-button .e-btn,
+  .bootstrap .e-btn-group.e-custom-button .e-btn {
+    background: #f6f7f9;
+    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
+      0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+    text-transform: initial;
+  }
+
+  #update.e-btn {
+    border-bottom-left-radius: 8px;
+    border-top-left-radius: 8px;
+    border-right: 1px dotted #aaa;
+    width: 100px;
+  }
+
+  #task.e-btn {
+    border-right: 1px dotted #aaa;
+    width: 100px;
+  }
+
+  #notify.e-btn {
+    padding-left: 24px;
+    padding-right: 24px;
+    border-bottom-right-radius: 8px;
+    border-top-right-radius: 8px;
+  }
+
+  .default .e-badge.e-badge-overlap {
+    transform: translateX(-110%);
+    z-index: 100;
+  }
+  .e-badge.e-badge-overlap {
+    transform: translate(-100%,100%) !important;
+    z-index: 100;
+  }
+  .e-badge.e-badge-notification{
+    padding: 0 !important;
   }
 }
