--- a/src/styles/admin.scss
+++ b/src/styles/admin.scss
@@ -29,7 +29,7 @@ h1 {
 .TableInf {
   width: 100%;
   border-collapse: collapse;
-  height: 90%;
+  height: 60vh;
   border-spacing: 0;
   margin-bottom: 20px;
   //flex
