--- a/src/styles/Dashboard.scss
+++ b/src/styles/Dashboard.scss
@@ -22,7 +22,7 @@
   .content{
     position: relative;
     width: calc(100% - 20px);
-    height: calc(100vh - 60px);
+    height: calc(100% - 60px);
     left: 10px;
     padding-top: 15px;
     padding-right: 60px;
