--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -9,6 +9,7 @@
 @import "../../node_modules/@syncfusion/ej2-react-grids/styles/material.css";
 @import "../../node_modules/@syncfusion/ej2-react-treegrid/styles/material.css";
 @import "../../node_modules/@syncfusion/ej2-react-schedule/styles/material.css";
+@import "../../node_modules/@syncfusion/ej2-notifications/styles/material.css";
 
 $blue: #287bff;
 $white: #fff;
