--- a/src/styles/vAcuerdos.scss
+++ b/src/styles/vAcuerdos.scss
@@ -71,6 +71,8 @@
     padding-bottom: .2rem;
     --bs-gutter-x: 0.5rem;
   }
+ 
+
   .btn-primary{
     width: auto;
     height: 3.5rem;
@@ -146,6 +148,15 @@
       border: 1px solid #0067cf7d;
       background-color: #02386f;
       color: #fff;
+    }
+  }
+  .btn{
+    margin-top: 15px;
+    //width: 100%;
+  }
+  @media (max-width: 700px) {
+    .btn{
+      width: 100%;
     }
   }
   #aContacto{
