--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -265,8 +265,11 @@
     font-style: italic;
     text-transform: capitalize;
     opacity: 0.5;
-    font-size: 18px;
+    font-size: 16px;
     padding-left: 10px;
+    @media (max-width: 720px) {
+      font-size: 14px;
+    }
   }
 
   .head .container .row .col-md {
